--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "my_photo.png"
   name             : "Kaiwen Guo (郭楷文)"
   pronouns         : # example: "she/her"  
-  bio              : #"Short biography for the left-hand sidebar"
+  bio              : "Short biography for the left-hand sidebar"
   location         : "Hefei, Anhui, China"
   employer         : "USTC"
   uri              : # URL
