--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,26 +5,16 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "About Me"
+    url: "/#-about me"
+  
+  - title: "Education"
+    url: "/#-Education"
+  
   - title: "News"
     url: "/#-news"
   
   - title: "Publications"
-    url: /publications/
+    url: "/#-publications"
 
-  - title: "Talks"
-    url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
