--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: "/#-about me"
   
   - title: "Education"
-    url: "/#-Education"
+    url: "/#-education"
   
   - title: "News"
     url: "/#-news"
