--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,4 +17,5 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-
+  - title: "My Academic Ancestors"
+    url: "/#-My Academic Ancestors"
