--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Kaiwen Guo's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : "https://kevinguoustc.github.io/kevinguo.github.io/"
+url                      : "https://kevinguoustc.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://kevinguoustc.github.io/kevinguo.github.io/"
+repository               : "https://github.com/KevinGuoUSTC/KevinGuoUSTC.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
