--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@
 
 main:
   
+  - title: "About Me"
+    url: "/#-about-me"
+  
   - title: "Education"
     url: "/#-education"
   
@@ -15,3 +18,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
+  - title: "My Academic Ancestors"
+    url: "/#-my-academic-ancestors"
+
+    - title: "Acknowledgment"
+    url: "/#-acknowledgment"
