--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Kaiwen Guo"
 description              : &description "personal description"
 url                      : "https://kevinguoustc.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : #"https://github.com/KevinGuoUSTC/KevinGuoUSTC.github.io"
+repository               : "https://github.com/KevinGuoUSTC"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
