--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 locale                   : "en-US"
 title                    : "Kaiwen Guo's Homepage"
 title_separator          : "-"
-name                     : &name "Kaiwen Guo"
+name                     : &name "Kaiwen Guo (郭楷文)"
 description              : &description "personal description"
 url                      : "https://kevinguoustc.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/KevinGuoUSTC"
+repository               : "KevinGuoUSTC/KevinGuoUSTC.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
