--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Kaiwen Guo (郭楷文)"
 description              : &description "personal description"
 url                      : "https://kevinguoustc.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "/KevinGuoUSTC/KevinGuoUSTC.github.io"
+repository               : #"/KevinGuoUSTC/KevinGuoUSTC.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "KevinGuoUSTC"
+  github           : #"KevinGuoUSTC"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
