--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "my_photo.jpg"
   name             : "Kaiwen Guo (郭楷文)"
   pronouns         : # example: "she/her"  
-  bio              : "PhD, CS, USTC"
+  bio              : "PhD, Computer Science, USTC"
   location         : "Hefei, Anhui, China"
   employer         : "USTC"
   uri              : # URL
