--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,5 @@ main:
   - title: "My Academic Ancestors"
     url: "/#-my-academic-ancestors"
 
-  - title: "Acknowledgment"
-    url: "/#-acknowledgment"
+  - title: "Acknowledgments"
+    url: "/#-acknowledgments"
