--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,12 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
+  - title: "Talks"
+    url: "/#-talks"
+
+  - title: "Academic Services"
+    url: "/#-academic-services"
+
   - title: "My Academic Ancestors"
     url: "/#-my-academic-ancestors"
 
