--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Hefei, Anhui, China"
   employer         : "USTC"
   uri              : # URL
-  email            : "kevinguo@mail.ustc.edu.cn" 
+  email            : "kevinguo@ouc.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
